# cmu_crew_ai

./: LICENSE  wildfire_crewai_prompt.md
wildfire_prediction/: README.md  pyproject.toml
wildfire_prediction/data/: generate_sample_data.py  sample_hotspot_data.csv
wildfire_prediction/output/: data_quality_report.txt  processed_features.csv
wildfire_prediction/src/wildfire_prediction/: crew.py  main.py
wildfire_prediction/src/wildfire_prediction/config/: agents.yaml  tasks.yaml
wildfire_prediction/src/wildfire_prediction/tools/: __init__.py  data_fetcher.py  data_processor.py  map_generator.py  ml_trainer.py  report_tool.py
wildfire_prediction/tests/: test_crew.py
