[project]
name = "wildfire-prediction"
version = "0.1.0"
description = "Multi-Agent Wildfire Hotspot Prediction Pipeline using CrewAI"
requires-python = ">=3.12,<3.15"
dependencies = [
    "crewai>=1.9.0",
    "crewai-tools>=0.45.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.6.0",
    "tensorflow>=2.18.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "geopandas>=1.0.0",
    "folium>=0.19.0",
    "anthropic>=0.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildfire_prediction"]
